--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-graphql": "^0.12.0",
     "express-validator": "^5.3.0",
     "graphql": "^15.5.3",
+    "helmet": "^4.6.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.2",
     "multer": "^1.4.0"
